k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linepe
  namespace: linepe
spec:
  selector:
    app: linepe
  ports:
    - name: http
      port: 80
      targetPort: 5000
  type: ClusterIP
